--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="una capa">
       <h1>Hola mundo!</h1>
-      <p>segundo commit. Este es un ejemplo del uso de HTML para crear un documento web que nuestro navegador es capaz de interpretar.</p>
+      <p>tercer commit. Este es un ejemplo del uso de HTML para crear un documento web que nuestro navegador es capaz de interpretar.</p>
     </div>
   </body>  
 </HTML>
